tests/errors/default_operator_type_mismatch.dang
# Test default operator type mismatch
let result = "hello" ?? 42
